--- a/templates/Home.html
+++ b/templates/Home.html
@@ -8,7 +8,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="stylesheet" type="text/css" href="/static/style.css">
-        <link rel="stylesheet" type="text/css" href="/static/chatbot.css">
+        <link rel="stylesheet" type="text/css" href="/static/styles.css">
         <link
             href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap"
             rel="stylesheet">
@@ -85,59 +85,6 @@
 
         <!-- Home Content -->
         <main>
-            <div class="chatbot">
-
-                <a href="#" id="signup-patient"> <img
-                        src="/static/images/chatbot.png" alt="chatbot"></a>
-            </div>
-            <div class="chatbot-popup">
-                <div class="popup-content">
-                    <div class="signup">
-                        <div class="chat">
-
-                            <!-- ChatBot -->
-                            <section class="msger">
-                                <header class="msger-header">
-                                    <div class="msger-header-title">
-                                        <i class="fas fa-bug"></i> Chatbot <i
-                                            class="fas fa-bug"></i>
-                                        <img src="/static/images/close.png"
-                                            alt="close"
-                                            class="close">
-                                    </div>
-                                </header>
-
-                                <main class="msger-chat">
-                                    <div class="msg left-msg">
-
-                                        <div class="msg-bubble">
-                                            <div class="msg-info">
-                                                <div class="msg-info-name">Chatbot</div>
-                                                <div class="msg-info-time">12:45</div>
-                                            </div>
-
-                                            <div class="msg-text">
-                                                Hi, welcome to ChatBot!
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                </main>
-
-                                <form class="msger-inputarea">
-                                    <input type="text" class="msger-input"
-                                        id="textInput"
-                                        placeholder="Enter your message...">
-                                    <button type="submit" class="msger-send-btn">Send</button>
-                                </form>
-                            </section>
-
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-
             <section class="main">
 
                 <div class="image-overlay">
@@ -149,10 +96,96 @@
                             <br> adipisicing elit. Praesentium corporis quo.
                         </p>
                         <a href="appointment" class="btn">Consult</a>
+
+<!-- Chatbot
+Chat icon to toggle the chatbot -->
+<div class="chat-icon" onclick="toggleChatbot()">
+    <i class="fa fa-comments"></i>
+</div>
+
+<div class="wrapper" id="chatbot-container">
+    <div class="title">Chatbot</div>
+    <div class="box" id="chatbox"> <!-- Added an ID to the chatbox for easy access -->
+        <div class="item">
+            <div class="icon">
+              
+            </div>
+            <div class="msg">
+                <p>Hello everyone, How are you?</p>
+            </div>
+        </div>
+        <br clear="both">
+    </div>
+
+    <div class="typing-area">
+        <div class="input-field">
+            <input type="text" id="user-input" placeholder="Type your message" required>
+            <button onclick="sendMessage()">Send</button>
+        </div>
+    </div>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script>
+    // Function to toggle the visibility of the chatbot
+    function toggleChatbot() {
+        var chatbotContainer = $('#chatbot-container');
+        chatbotContainer.toggle();
+        scrollToBottom();
+    }
+
+    // Function to send a message when the send button is clicked or Enter key is pressed
+    function sendMessage() {
+        var userQuery = $('#user-input').val();
+        if (userQuery.trim() !== '') {
+            appendUserMessage(userQuery);
+
+            $.ajax({
+                type: 'POST',
+                url: '/get_response',
+                data: { user_query: userQuery },
+                success: function (response) {
+                    appendChatbotMessage(response.response);
+                    scrollToBottom();
+                }
+            });
+
+            $('#user-input').val('');
+        }
+    }
+
+    // Function to append user's message to the chat display
+    function appendUserMessage(message) {
+        $('.box').append('<div class="item right"><div class="msg"><p>' + message + '</p></div><div class="icon user-icon"></div></div><br clear="both">');
+    }
+
+    // Function to append chatbot's message to the chat display
+    function appendChatbotMessage(message) {
+        $('.box').append('<div class="item"><div class="icon"></div><div class="msg"><p>' + message + '</p></div></div><br clear="both">');
+    }
+
+    // Function to scroll to the bottom of the chatbox with a smooth scroll effect
+    function scrollToBottom() {
+        var chatbox = document.getElementById("chatbox");
+        // Smooth scroll effect
+        $('#' + chatbox.id).animate({ scrollTop: chatbox.scrollHeight }, 800);
+    }
+
+    // Listen for the Enter key press on the input field
+    $('#user-input').keypress(function (e) {
+        if (e.which === 13) { // 13 is the key code for Enter
+            sendMessage();
+        }
+    });
+</script>
+
+
+
                     </div>
                 </div>
             </section>
 
+    
             <!-- About Us -->
 
             <section class="section_doctors">
@@ -281,93 +314,6 @@
                     </footer>
                 </main>
 
-                <!-- Chatbot Script -->
-                <script
-                    src='https://use.fontawesome.com/releases/v5.0.13/js/all.js'></script>
-                <script>
-
-    const msgerForm = get(".msger-inputarea");
-    const msgerInput = get(".msger-input");
-    const msgerChat = get(".msger-chat");
-
-
-    // Icons made by Freepik from www.flaticon.com
-    const BOT_IMG = "https://image.flaticon.com/icons/svg/327/327779.svg";
-    const PERSON_IMG = "https://image.flaticon.com/icons/svg/145/145867.svg";
-    const BOT_NAME = "    ChatBot";
-    const PERSON_NAME = "You";
-
-    msgerForm.addEventListener("submit", event => {
-      event.preventDefault();
-
-      const msgText = msgerInput.value;
-      if (!msgText) return;
-
-      appendMessage(PERSON_NAME, PERSON_IMG, "right", msgText);
-      msgerInput.value = "";
-      botResponse(msgText);
-    });
-
-    function appendMessage(name, img, side, text) {
-      //   Simple solution for small apps
-      const msgHTML = `
-<div class="msg ${side}-msg">
-  <div class="msg-img" style="background-image: url(${img})"></div>
-
-  <div class="msg-bubble">
-    <div class="msg-info">
-      <div class="msg-info-name">${name}</div>
-      <div class="msg-info-time">${formatDate(new Date())}</div>
-    </div>
-
-    <div class="msg-text">${text}</div>
-  </div>
-</div>
-`;
-
-      msgerChat.insertAdjacentHTML("beforeend", msgHTML);
-      msgerChat.scrollTop += 500;
-    }
-
-    function botResponse(rawText) {
-
-      // Bot Response
-      $.get("/get", { msg: rawText }).done(function (data) {
-        console.log(rawText);
-        console.log(data);
-        const msgText = data;
-        appendMessage(BOT_NAME, BOT_IMG, "left", msgText);
-
-      });
-
-    }
-
-
-    // Utils
-    function get(selector, root = document) {
-      return root.querySelector(selector);
-    }
-
-    function formatDate(date) {
-      const h = "0" + date.getHours();
-      const m = "0" + date.getMinutes();
-
-      return `${h.slice(-2)}:${m.slice(-2)}`;
-    }
-
-
-
-  </script>
-
-                <!-- ////////////////////////////////////////////////////// -->
-                <script>
-                document.getElementById("signup-patient").addEventListener("click", function(){
-                    document.querySelector(".chatbot-popup").style.display="flex";
-                })
-                     document.querySelector(".close").addEventListener("click",function(){
-                        document.querySelector(".chatbot-popup").style.display="none";
-                     })
-                  </script>
                 <script
                     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
                     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
